# OsakanaFFT

./: README.md
research/: citrus.ipynb  cutoff_gain.ipynb  dataextraction.ipynb  hrm1017.ipynb  kurumi.ipynb  lm358_3.3v_all.asc  lm358_3.3v_all2.asc  lm358_3.3v_all3.asc  lm358_5v_all.asc  nsdf.ipynb  plotdata.ipynb  ragrange.ipynb  research.ipynb
src/: CMakeLists.txt  GlobalConfig.h  OsakanaFFT.sln
src/BitReverseTableGenerator/: BitReverseTableGenerator.cpp  BitReverseTableGenerator.vcxproj  BitReverseTableGenerator.vcxproj.filters  stdafx.cpp
src/HelloButterfly/: HelloButterfly.cpp  HelloButterfly.vcxproj  HelloButterfly.vcxproj.filters  stdafx.cpp
src/MainSample/: CMakeLists.txt  MainSample.vcxproj  MainSample.vcxproj.filters  main.cpp  stdafx.cpp
src/OsakanaFft/: CMakeLists.txt  OsakanaFft.vcxproj  OsakanaFft.vcxproj.filters  stdafx.cpp
src/OsakanaFft/include/: OsakanaComplex.h  OsakanaFft.h  OsakanaFftConfig.h  OsakanaFftDebug.h  OsakanaFp.h  OsakanaFpComplex.h  OsakanaFpFft.h  OsakanaFpFftDebug.h
src/OsakanaFft/src/: OsakanaFft.c  OsakanaFft.cpp  OsakanaFftUtil.h  OsakanaFpFft.c  OsakanaFpFft.cpp  bitreversetable.h  twiddletable.h
src/OsakanaFftCl/: CMakeLists.txt  clfft.cl  clfft.cpp
src/OsakanaFftTest/: OsakanaFftTest.vcxproj  OsakanaFftTest.vcxproj.filters  fixedpointtest.cpp  stdafx.cpp
src/OsakanaPitchDetection/: OsakanaPitchDetection.vcxproj  OsakanaPitchDetection.vcxproj.filters  PeakDetectMachine.cpp  PeakDetectMachine.h  main.cpp  stdafx.cpp
src/OsakanaPitchDetectionTest/: OsakanaPitchDetectionTest.vcxproj  edgedetectortest.cpp  (+7 more)
(+48 files in other folders)
